openapi: generate XML request bodies, wire into converter, add tests;… … misc UI & spider fixes
Implement DOM-based XML body generation in BodyGenerator

Add BodyGenerator.generateXml(MediaType) and generateXml(Schema)
Prefer media-type examples; otherwise generate XML from Schema
Support common xml.* metadata: xml.name, xml.attribute, xml.wrapped, xml.namespace and xml.prefix
Handle primitives, arrays (wrapped / unwrapped), object properties, additionalProperties (serialized as <entry><key/><value/>), BinarySchema placeholder, and basic composed-schema handling (oneOf/anyOf/allOf merge)
Emit generator error messages on failures (preserve existing error collection)
Wire XML generation into request conversion

RequestModelConverter: detect application/xml, text/xml and application/*+xml, prefer exact application/xml and call BodyGenerator.generateXml(...) instead of logging unsupported-content
Tests and integration

Add/tighten unit tests in BodyGeneratorXmlUnitTest that parse generated XML and assert structure (elements, attributes, namespaces, counts)
Update v3 BodyGeneratorUnitTest where necessary
Add integration test OpenApiIntegrationXmlTest and test resource openapi_xml_integration.yaml to verify generated XML bodies and removal of the previous unsupported-content message
Miscellaneous improvements / cleanup

ImportDialog: minor formatting, switch validation to use java.net.URI to avoid deprecated URL-based parsing and avoid deprecated constructors
SpiderDialog & UrlCanonicalizer: minor whitespace/formatting fixes and replace deprecated URL(String,...) usage with URI construction where appropriate (avoid deprecated constructors)
Small refactors and formatting adjustments across changed files